--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Google font OSWOLD -->
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Oswald&family=Roboto+Condensed&family=Teko:wght@300..700&display=swap')
+    </style>
 
     <title>Ederick S. Bañez</title>
   </head>
